--- a/PureMD/컴퓨터네트워크/10.md
+++ b/PureMD/컴퓨터네트워크/10.md
@@ -144,7 +144,7 @@ Ethernet
 
 hop..?
 
-네트웤-노드-간 경로 1개..?
+네트워크-노드-간 경로 1개..?
 
 - 장비 끼리의 경로 하나?
 
@@ -210,7 +210,7 @@ IXP?
 
 
 
-패킷.지연.EU?
+패킷.지연.이유?
 
 - 에러 검사,queueing,물리 거리
 
@@ -446,7 +446,7 @@ stacus_code?
 
 
 
-telnet으로 tcp-text communication이 ㄱㄴ..?
+telnet으로 tcp-text communication이 가능..?
 
 
 
@@ -498,7 +498,7 @@ SMTP=Simple Mail transfer Protocol
 
 composing/editing/reading mail msg??
 
-긍께 사용자?
+그러니까 사용자?
 
 #### mail server
 
