--- a/PureMD/컴퓨터네트워크/12.md
+++ b/PureMD/컴퓨터네트워크/12.md
@@ -1,4 +1,4 @@
-todo=4장=네트웤 계층.데이터 평면?
+todo=4장=네트워크 계층.데이터 평면?
 
 
 
@@ -34,7 +34,7 @@ transport 계층은 걍 end-to-end자너
 
 
 
-네트웤 계층에서는 라우터가 등장함.
+네트워크 계층에서는 라우터가 등장함.
 
 크게 3가지 일을 함.
 
@@ -50,7 +50,7 @@ ip routing?만을 전담하는.
 
 
 
-하위-네트웤 게층의 도움을 받아
+하위-네트워크 게층의 도움을 받아
 
 data gram을 받는/보내는 input/output Queue가 있음.
 
@@ -98,7 +98,7 @@ ip 주소는 ipv4 기준으로
 
 0~255로 4개의 숫자를 사용.
 
-어디까지는 네트웤 지칭, 나머지는 호스트 지칭..?
+어디까지는 네트워크 지칭, 나머지는 호스트 지칭..?
 
 - 호스트마다 ip가 있으니까..?
 
@@ -130,7 +130,7 @@ ip 주소는 ipv4 기준으로
 
 
 
-그래서 네트웤-계층은 4,5장으로 2개로 나누어짐.
+그래서 네트워크-계층은 4,5장으로 2개로 나누어짐.
 
 
 
