--- a/PureMD/컴퓨터네트워크/4.md
+++ b/PureMD/컴퓨터네트워크/4.md
@@ -16,7 +16,7 @@
 
 # 3장=전송계층(transport layer)
 
->네트웤.핵심임
+>네트워크.핵심임
 
 >어려움
 
@@ -54,9 +54,9 @@ transport protocol은 end-system=종단 시스템에서만..?
 
 >보통 os-레벨에서 해줌
 
-(긍께 (물리적)중간 시스템에서는 이런 거 신경 안씀)
+(그러니까 (물리적)중간 시스템에서는 이런 거 신경 안씀)
 
-routing은 네트웤-레이어임
+routing은 네트워크-레이어임
 
 - 긍께 주소 관련은 얘내 알바가 아님
 
@@ -88,7 +88,7 @@ A,B가 한 방에 있으면
 
 걍 논리적-약속만 있으면 됨.
 
-이 문자는 뭔 뜻이다 등.
+이 문자는 무슨 뜻이다 등.
 
 그게 논리 계층
 
@@ -166,7 +166,7 @@ network vs transport?
 
 - tcp/udp/sctp
 
-네트웤
+네트워크
 
 - ip
 
@@ -230,7 +230,7 @@ extention of "best effort" ip..?
 
 
 
-긍께 다중화는 한 통로를 여렀이 쓰는 거
+그러니까 다중화는 한 통로를 여렀이 쓰는 거
 
 역다중화는 그걸 다시 잘 배분하는거
 
@@ -272,7 +272,7 @@ tcp socket-4 tuple에 의해 identify됨
 
 ???
 
-긍께 문제가 생기는 거 맞지?
+그러니까 문제가 생기는 거 맞지?
 
 
 
@@ -328,7 +328,7 @@ regster 저장 영역?
 
 pcb는 process마다 하나.
 
-고로 process끼리는 simple하게 메모리-access가 ㅂㄱㄴ.
+고로 process끼리는 simple하게 메모리-access가 ㅂ가능.
 
 
 
@@ -368,7 +368,7 @@ SNMP에도 사용
 
 
 
-사용자 지정 에러 처리가 ㄱㄴ!
+사용자 지정 에러 처리가 가능!
 
 (사실 권장)
 
