--- a/PureMD/컴퓨터네트워크/7.md
+++ b/PureMD/컴퓨터네트워크/7.md
@@ -130,7 +130,7 @@ urg data pointer?
 
 - urg가 1일때 사용..?
 
-긍께 header가 20~60byte
+그러니까 header가 20~60byte
 
 
 
@@ -368,7 +368,7 @@ seq=120부터 보냄.
 
 이게 누적 ack의 장점
 
-가장-최근-ack만 잘 받으면 다 잘 받은거 확인 ㄱㄴ.
+가장-최근-ack만 잘 받으면 다 잘 받은거 확인 가능.
 
 >근데 particial로 잘 받으면..?
 
@@ -500,7 +500,7 @@ sender/reciver는 "handshake"를 함.
 
 이게 끝나면 연결 확정
 
-양쪽 다 x,y는 임의의 값으로 설정 ㄱㄴ.
+양쪽 다 x,y는 임의의 값으로 설정 가능.
 
 
 
@@ -510,11 +510,11 @@ sender/reciver는 "handshake"를 함.
 
 ## 절반 닫기
 
-한쪽에서는 데이터 수신하면서 데이터 전송 종료 ㄱㄴ..??
+한쪽에서는 데이터 수신하면서 데이터 전송 종료 가능..??
 
-긍께 난 더 전송은 안하겠지만 받을 건 남아 있다
+그러니까 난 더 전송은 안하겠지만 받을 건 남아 있다
 
-어느 쪽이던 요청 ㄱㄴ..?
+어느 쪽이던 요청 가능..?
 
 ACK는 양쪽 다
 
