--- a/PureMD/컴퓨터네트워크/8.md
+++ b/PureMD/컴퓨터네트워크/8.md
@@ -78,7 +78,7 @@ seq#는 항상 임의, 보통 from os
 
 
 
-긍께
+그러니까
 
 client->synFlag,seq#=x,ack#=0->server
 
@@ -258,7 +258,7 @@ Nagle 알고리즘?
 
 - 보냄.
 
-네트웤 속도 빠르면 걍 보냄
+네트워크 속도 빠르면 걍 보냄
 
 느리면 모아 전송해서 오버헤드 줄임.
 
@@ -266,7 +266,7 @@ Nagle 알고리즘?
 
 ### slow start
 
-네트웤 전송 처리 능력을 반영하기 위해
+네트워크 전송 처리 능력을 반영하기 위해
 
 혼잡 윈도우를 두어 속도 제어
 
@@ -284,17 +284,17 @@ Nagle 알고리즘?
 
 망에 입력되는 트래픽 양이 망이 처리 가능한 한도를 초과할 경우 발생.
 
-네트웤 속도는 일정 안함..
+네트워크 속도는 일정 안함..
 
 도로 막히는 것처럼.
 
 킹론상 도로(망) 더 깔면 되긴 하지만
 
-TCP 레벨에서 근본적으로 해결 ㅂㄱㄴ한 문제.
+TCP 레벨에서 근본적으로 해결 ㅂ가능한 문제.
 
 ### congestion control.원칙
 
-네트웤이 handle하기엔 너무 많은 뭊
+네트워크이 handle하기엔 너무 많은 뭊
 
 다향한 tcp 버젼에서 여러 전략 사용함.
 
@@ -368,7 +368,7 @@ End-to-End.ex?
 
 대응-통보+rate ctrl
 
-원래는 라우터(네트웤 계층)서 하는게 나은데..
+원래는 라우터(네트워크 계층)서 하는게 나은데..
 
 - 근데 현재는 TCP 계층서 함
 
@@ -456,7 +456,7 @@ cwnd+=1
 
 
 
-긍께 threshold 반까지는 지수적 증가 해보고
+그러니까 threshold 반까지는 지수적 증가 해보고
 
 그 뒤로는 선형적 증가
 
@@ -500,7 +500,7 @@ window레지스트리에 tcp관련 설정 있음
 
 
 
-그리고 MSS는 상수가 아니라 runtime에 바뀌는 뭔가여..?
+그리고 MSS는 상수가 아니라 runtime에 바뀌는 무슨가여..?
 
 
 
