--- a/PureMD/컴퓨터네트워크/9.md
+++ b/PureMD/컴퓨터네트워크/9.md
@@ -122,9 +122,9 @@ program/process/thread-시험에 안나옴
 
 ## multiplexing/demultiplexing
 
-한 회선을 여러 process가 공유 ㄱㄴ한 거?
+한 회선을 여러 process가 공유 가능한 거?
 
-긍께 한 ip주소에 여러 프로세스가 각각 port 쓸 수 있는 거
+그러니까 한 ip주소에 여러 프로세스가 각각 port 쓸 수 있는 거
 
 
 
@@ -156,7 +156,7 @@ length
 
 >tcp는 header len까지 있음
 
->udp는 그없. 고정 길이라.
+>udp는 그런 거 없음. 고정 길이라.
 
 checksum
 
@@ -244,7 +244,7 @@ tcp에선?
 
 ###### ex
 
-packet,ack 다 loss ㄱㄴ..
+packet,ack 다 loss 가능..
 
 packet loss면 ack가 안외서 그걸로 감지
 
@@ -294,7 +294,7 @@ acks:
 
 ###### window.size
 
-변동 ㄱㄴ.
+변동 가능.
 
 송/수신자 크기 달라도 ㄱㅊ.
 
@@ -372,7 +372,7 @@ ack#은 바로 전 seq#+packet.size?임
 
 
 
-긍께 여기부터 보내라는 거임.
+그러니까 여기부터 보내라는 거임.
 
 
 
@@ -520,7 +520,7 @@ Nagle 알고리듬?
 
 ### network congestion
 
-걍 네트웤이 혼잡한거.
+걍 네트워크이 혼잡한거.
 
 느리거나 drop되거나..
 
