--- a/PureMD/컴퓨터네트워크/3.md
+++ b/PureMD/컴퓨터네트워크/3.md
@@ -24,7 +24,7 @@ MTP?
 
 # DNS 프로토콜?
 
-이러한 약속을 지켜서 보내기/해석 ㄱㄴ.
+이러한 약속을 지켜서 보내기/해석 가능.
 
 - 매번 quarry:some,reply:some2 대신에
 
@@ -74,7 +74,7 @@ bittorrent?
 
 그 뒤 가장 못?해준 친구를 잘라냄..?
 
-긍께 자동으로 fit되는 네트웤..인..가..?
+그러니까 자동으로 fit되는 네트워크..인..가..?
 
 
 
@@ -122,7 +122,7 @@ DASH?
 
 - menefest file:다른 여러 청크(압축 방식 등?)에 대한 URL 결정
 
-클라이언트에서 가용 네트웤-대욕폭 보고
+클라이언트에서 가용 네트워크-대욕폭 보고
 
 언제 req 할지,
 
@@ -154,7 +154,7 @@ Akamai가 이런 서비스 제공.
 
 국을,넷플릭스 정도 크기 아니면 이런 데에 맏기는게..
 
-암튼 이런 식으로 컨텐트를 여러 서버에 복사본을 나눠놓는 방식=CDN
+아무튼 이런 식으로 컨텐트를 여러 서버에 복사본을 나눠놓는 방식=CDN
 
 
 
@@ -234,7 +234,7 @@ socket.recvfrom(n_bytes)
 
 bytes로 받는 것 같으니
 
-.decode로 str로 변환 ㄱㄴ.
+.decode로 str로 변환 가능.
 
 
 
@@ -368,7 +368,7 @@ wireshark?
 
 파일을 공?유 하는게 목표..
 
-긍께 CRUD중 최소한 RU
+그러니까 CRUD중 최소한 RU
 
 
 
@@ -404,7 +404,7 @@ PORT 커맨드로 자기 포트 알림..?
 
 
 
-긍께 control process끼리 연결되면
+그러니까 control process끼리 연결되면
 
 클라네 데이터 프로세스가 포트를 열고
 
@@ -476,7 +476,7 @@ ftp 서버는 도메인-기반이나 ip-기반으로 locate.
 
 보통 ftp는 폐쇠적(id,pass 인증 필요)
 
-이 경우엔 guest여도 로그인 ㄱㄴ..?
+이 경우엔 guest여도 로그인 가능..?
 
 https://filezilla-project.org
 
@@ -514,7 +514,7 @@ tcp가 꽤 까다로음
 
 지난 시간까진 어플리케이션 프로토콜.
 
-서로 어떻겐지는 잘 몰라도 암튼 서로 말하는 규약-이 있고
+서로 어떻겐지는 잘 몰라도 아무튼 서로 말하는 규약-이 있고
 
 서로 그거 지켜서 말 할 수 있음.
 
@@ -524,7 +524,7 @@ tcp가 꽤 까다로음
 
 
 
-긍께 이번 시간은 //우편 배달부 layer..?
+그러니까 이번 시간은 //우편 배달부 layer..?
 
 비서-layer
 
@@ -538,7 +538,7 @@ ref tcp joke
 
 약 4-중 안전장비로 받았는지,그걸 확인했는지 다 확인 함.
 
-udp는 그없.
+udp는 그런 거 없음.
 
 걍 편지를 던져놓고 확인도 안함.
 
@@ -548,7 +548,7 @@ udp는 그없.
 
 tcp는 비서가 책임지고 잘 간거 확인까지 해줌
 
-udp는 그없. 걍 빨리 보내고 빨리 받음.
+udp는 그런 거 없음. 걍 빨리 보내고 빨리 받음.
 
 
 
@@ -562,7 +562,7 @@ udp는 그없. 걍 빨리 보내고 빨리 받음.
 
 
 
-비서는 안의 내용이 뭔뜻인지는 모름
+비서는 안의 내용이 무슨뜻인지는 모름
 
 그건 application 레이어.
 
