--- a/PureMD/컴퓨터네트워크/2장.md
+++ b/PureMD/컴퓨터네트워크/2장.md
@@ -1,17 +1,27 @@
+# 주요 프로토콜들
+- DNS
+
+- SMTP
+
+- POP
+
+- IMAP
+
+- FTP
+
+- HTTP
+
 # 메일 format
 
-유저-에이전트에서 작성한 format!=프로토콜
+유저-에이전트에서 작성한 format, 프로토콜이랑은 조금 다름
 
-작성한 걸 구형?포맷으로 변환..?
+작성한 걸 구형?포맷으로 변환.
 
-내가 쓰는 게 바로 상대로 가는 게 아님..?
+사실은 내가 쓰는 게 바로 상대한테로 가는 게 아님.
 
 내 이메일 서버에 보내고, 상대방네 이메일 서버랑 통신해서 보내는 거.
 
-보내는 단위가 1줄...?
-
-
-
+보내는 단위가 1줄.
 
 
 # DNS 프로토콜?
