--- a/PureMD/컴퓨터네트워크/2장.md
+++ b/PureMD/컴퓨터네트워크/2장.md
@@ -76,7 +76,7 @@ p2p는 받은 사람이 새 서?버 처럼 되서 오버헤드 담당.
 
 그 뒤 가장 못?해준 친구를 잘라냄.
 
-긍께 자동으로 fit되는 네트웤..인..가..?
+> 일종의 자동으로 fit되는 네트워크?
 
 
 
@@ -86,7 +86,7 @@ vidio.srteaming & cdns?
 
 vid traffic이 인터넷의 주-traffic...
 
-- 망 사용료..?
+- 망 사용료 문제도 존재
 
 한 서버가 다-담당하기엔 병목도 그렇고 힘듦..
 
@@ -124,11 +124,11 @@ vid는 용량이 커서 압축 필수(해도 크긴 함)
 
 클라이언트에서 가용 네트웤-대욕폭 보고
 
-언제 req 할지,
+언제 요청 할지,
 
 어떤 압축률을 고를 지,
 
-어디에 req 할지
+어디에 요청 할지
 
 를 클라가 결정해야.
 
@@ -146,7 +146,7 @@ vid는 용량이 커서 압축 필수(해도 크긴 함)
 
 - 작은 소형-서버 여러곳에?
 
-## 지역별 대형 데타-센터?
+## 지역별 대형 데이터 센터?
 
 Akamai가 이런 서비스 제공.
 
