--- a/PureMD/컴퓨터네트워크/3장.md
+++ b/PureMD/컴퓨터네트워크/3장.md
@@ -137,6 +137,8 @@ payload
 
 DNS,SNMP 등에 사용
 
+물론 사용자 지정 오류 처리를 따로 구현
+
 # tcp
 ## tcp.특징
 - connection oriented
@@ -191,9 +193,21 @@ udt_send()
 
 정도는 이해해야.
 
+## tcp.원리
+
+### 송/수신 버퍼
+
+말 그대로 임시 저장소
+
+애플리케이션->송신 버퍼->네트워크->수신 버퍼->애플리케이션
+
+#### 윈도우?
+
+한 번에 보낼 데이터 양,또는 패킷 크기
 
 
-#### tcp.전송 에러 해결책?
+
+### tcp.전송 에러 해결책?
 
 비트 error
 
@@ -203,15 +217,18 @@ udt_send()
 
 패킷 손실
 
-- Timeout 설정
+- Timeout 설정,ack#
+
+  -시간내로 안오면 손실 감지
+  
+  -중간에 ack#이 빠지면 손실 감지
 
 - Sequence Numger=seq# 으로 중복 전송 해결
+  -몇번째(정확히는 어디까지)를 보내는지 패킷에 동봉
 
-- >버퍼+window 필요!
+- 그걸 위해 버퍼+window가 필요
 
-
-
-##### packet 재전송.방법
+#### packet 재전송.방법
 
 stop-and-wait
 
@@ -235,7 +252,7 @@ tcp에선?
 
 
 
-###### ex
+##### ex
 
 packet,ack 다 loss 가능..
 
@@ -249,7 +266,7 @@ ack loss여도 ack 안오는 걸로 감지해서 다시 모냄
 
 RTT=패킷 왕복 시간.
 
-###### stop-and wait
+##### stop-and wait
 
 패킷 하나당 RTT씩이나 듦..
 
@@ -265,7 +282,7 @@ selective repeat
 
 
 
-###### go-back-n.ex
+##### go-back-n.ex
 
 sender 측:
 
