--- a/PureMD/데이터베이스기초/7.과제.md
+++ b/PureMD/데이터베이스기초/7.과제.md
@@ -1,5 +1,5 @@
-    무게가 10보다 크고 서울에서 만들어지지 않는 부품의 색상과 도시를 구하라
-
+### 무게가 10보다 크고 서울에서 만들어지지 않는 부품의 색상과 도시를 구하라
+```sql
 SELECT color,wgt,city
 
 FROM P
@@ -7,59 +7,59 @@ FROM P
 WHERE wgt>10 AND city<>'서울';
 
 >ORDER BU city DESC
-
-    사무실과 창고가 같은 도시에 위치하고 있는 공급자이름과 부품 이름을 구하라.
-
+```
+### 사무실과 창고가 같은 도시에 위치하고 있는 공급자이름과 부품 이름을 구하라.
+```sql
 SELECT sname,pname
 
 FROM S,P,SP
 
 WHERE S.s#=SP.s# AND P.p#=SP.p# AND S.city=P.city
-
+```
 모범:
-
+```sql
 SELECT sname,pname
 
 FROM S,P
 
 WHERE S.city=P.city
-
-    서로 같은 도시에 사무실을 갖고 있는 공급자들의 번호쌍을 구하시오.
-
+```
+### 서로 같은 도시에 사무실을 갖고 있는 공급자들의 번호쌍을 구하시오.
+```sql
 SELECT S1.s#,S2.s#
 
 FROM S AS S1 S AS S2
 
 WHERE S1.city=S2.city;
-
+```
 모범:
-
+```sql
 SELECT S1.s# as Name1,S2.s# as Name2
 
 FROM S AS S1 S AS S2
 
 WHERE S1.city=S2.city AND S1.s#<>S2.s#;
+```
+별칭 줘야...이름 같은 필드가 2개면 좀;
 
->별칭 줘야...이름 같은 필드가 2개면 좀;
+거기에 본인이 여러 번 나올 수 있으니까.
 
->거기에 본인이 여러 번 나올 수 있으니까.
-
-    공급되는 각각의 부품에 대하여 부품 번호와 총 공급량을 구하시오.
-
+### 공급되는 각각의 부품에 대하여 부품 번호와 총 공급량을 구하시오.
+```sql
 SELECT p#,SUM(qty)
 
 FROM SP
 
 GROUP BY p#
-
+```
 모범:
-
+```sql
 SUM(qty) as Tname
-
+```
 처럼 해야.
 
 최신 feature:
-
+```sql
 SELECT P.p#,(
 
 SELECT SUM(sp.qty)
@@ -69,11 +69,10 @@ FROM SP
 WHERE SP.p#=P.p#
 
 AS total
-
 )
-
-    한 명 이상의 공급자에 의해 공급되는 모든 부품의 부품 번호를 구하시오.
-
+```
+### 한 명 이상의 공급자에 의해 공급되는 모든 부품의 부품 번호를 구하시오.
+```sql
 SELECT p#
 
 FROM SP
@@ -81,19 +80,19 @@ FROM SP
 GROUP BY p# 
 
 HAVING DISTINCT COUNT(s#)>=1
-
+```
 >뭐야, 이거 
 
-6.    부품 ‘p2’를 공급하는 공급자들의 이름을 구하시오.
-
+### 부품 ‘p2’를 공급하는 공급자들의 이름을 구하시오.
+```sql
 SELECT DISTINCT sname
 
 FROM SP,P,S
 
 WHERE P.p#=SP.p# AND S.s#=SP.s# AND pname='p2'
-
+```
 IN 활용..?
-
+```sql
 SELECT sname
 
 FROM S
@@ -107,11 +106,11 @@ FROM SP,P
 WHERE P.p#=SP.p# AND S.s#=SP.s#
 
 )
-
+```
 ㅈㅁ..뭐여..'p2'가 이름이 아니라 p#이었어..??
 
 그러면 모범이
-
+```sql
 SELECT S.sname
 
 FROM S
@@ -125,13 +124,11 @@ FROM SP
 WHERE SP.p#='p2'
 
 )
+```
+SQL은 대/소문자 구분이 없다.. select나 SELECT나.
 
->SQL은 아마 대/소문자 관련 없는듯.. select나 SELECT나.
-
->
-
-    7.적어도 하나의 빨강색 부품을 공급하는 공급자의 이름을 구하시오.
-
+### 7.적어도 하나의 빨강색 부품을 공급하는 공급자의 이름을 구하시오.
+```sql
 SELECT sname
 
 FROM P
@@ -141,9 +138,10 @@ WHERE  EXISTS(
 ..?
 
 )
-
->'적어도'하나라 COUNT가 들어가야.
-
+```
+'적어도'하나라 COUNT가 들어가야.  
+고로 답은
+```sql
 SELECT sname
 
 FROM S
@@ -165,11 +163,12 @@ WHERE SP.p#=P.p# AND P.color='red'
 )
 
 )
-
+```
+깉이 되야 할 건데..
 tib-in/exists에 따라 좀 다름..?
 
 모범은
-
+```sql
 SELECT DISTINCT sname
 
 FROM S
@@ -191,23 +190,22 @@ WHERE P.color='red'
 )
 
 )
-
-조인에 미쳐?도 가능할듯?
-
+```
+조인만으로도 이론상은 가능할듯?
+```sql
 SELECT DISTINCT sname
 
 FROM S,P,SP
 
 WHERE SP.p#=P.p# AND S.s#=SP.s# AND P.color='red'
-
+```
 이것도 되긴 하네
 
 고로 IN이 된다면 왼만한 경우 JOIN으로 가능할듯..?
 
 
-
-    테이블 S에서 현재의 최대 상태값보다 작은 상태값을 가지는 공급자의 번호를 구하시오.
-
+### 테이블 S에서 현재의 최대 상태값보다 작은 상태값을 가지는 공급자의 번호를 구하시오.
+```sql
 SELECT sname
 
 FROM S
@@ -219,9 +217,9 @@ SELECT status
 FROM S
 
 )
-
+```
 모범은
-
+```sql
 SELECT sname
 
 FROM S
@@ -233,13 +231,12 @@ SELECT MAX(status)
 FROM S
 
 )
-
+```
 인듯
 
 MAX를 거기서 못하나?
-
-    부품 ‘p2’를 공급하지 않는 공급자의 공급자의 이름을 구하시오.
-
+### 부품 ‘p2’를 공급하지 않는 공급자의 공급자의 이름을 구하시오.
+```sql
 SELECT sname
 
 FROM S
@@ -253,13 +250,14 @@ FROM SP
 WHERE p#='p2'
 
 )
-
+```
 여기서 부품 p2를 공급하는 공급자 이름?
-
+```sql
 with EXISTS
+```
+를 사용해야...?
 
-
-
+```sql
 SELECT sname
 
 FROM S
@@ -273,147 +271,5 @@ FROM SP
 WHERE SP.s#=S.s# AND p#='p2'
 
 )
-
+```
 for문처럼 중첩 쿼리는 위->아래로 감..?
-
-"""
-
-EXISTS is true if and only if
-
-there exists at least 1 tuple
-
-in the result table
-
-"""
-
-그러니까 EXISTS X는
-
-len(x)>0이랑 같다는 거지
-
-그리고 >0이라 아마 단락-동작 지원할듯?
-
-
-
-SQL의 FROM은 일종의 for문임.
-
-FROM 대상이 여러개면 for 을 여러 개 돌리는 거고.
-
-
-
-고로 원래 문제의 모범 답안은
-
-SELECT DISTINCT S.sname
-
-FROM S
-
-WHERE NOT EXISTS(
-
-SELECT *
-
-FROM SP
-
-WHERE SP.s#=S.s#
-
-  AND SP.p#='p2'
-
-)
-
-
-
-    모든 부품을 공급하는 공급자에 대한 공급자의 이름을 구하시오.
-
-모범:
-
-SELECT sname
-
-FROM S
-
-WHERE NOT EXISTS(
-
-SELECT *
-
-FROM P
-
-WHERE NOT EXISTS(
-
-SELECT *
-
-FROM SP
-
-WHERE S.s#=SP.s# AND P.p#=SP.p#
-
-)
-
-);
-
-그러니까 공급 안하는 부품이 존재 안하는 공급자를 구하는 거임?!
-
-SELECT *
-
-FROM P
-
-WHERE NOT EXISTS(
-
-SELECT *
-
-FROM SP
-
-WHERE S.s#=SP.s# AND P.p#=SP.p#
-
-)
-
-위의 이거는 S가 공급하지 않는 부품의 목록임.
-
-왜냐하면 저 NOT EXISTS 다음에 있는 join?이
-
-P랑 S 를 SP로 join한거.
-
-그래서 저건 S가 공급하는
-
-
-
-중첩 for가 되면 머리가 아파짐..
-
-
-
-SQL/92?에선
-
-SELECT DISTINCT S.sname
-
-FROM S
-
-WHERE(
-
-SELECT COUNT(SP.p#)
-
-FROM SP
-
-WHERE SP.s#=S.s#
-
-)
-
-=
-
-(
-
-SELECT COUNT(P.p#)
-
-FROM P
-
-)
-
-)
-
-그러니까 모든 부품 개수랑
-
-공급하는 부품 개수가 같은 사람 찾기.
-
-앞에건 공급하는 부품 p# 개수
-
-뒤에건 전체 부품 p# 개수.
-
-
-
-이거보다 어려운 건 안나올 거암..?
-
-- 같은 문제 나올..지도..?
