resserect deleted part

--- a/PureMD/데이터베이스기초/7.과제.md
+++ b/PureMD/데이터베이스기초/7.과제.md
@@ -273,3 +273,139 @@ WHERE SP.s#=S.s# AND p#='p2'
 )
 ```
 for문처럼 중첩 쿼리는 위->아래로 감..?
+
+
+>EXISTS is true if and only if
+>there exists at least 1 tuple
+>in the result table
+
+그러니까 EXISTS X는
+
+len(x)>0이랑 같다는 거지
+
+그리고 >0이라 아마 단락-동작 지원할듯?
+
+  
+
+SQL의 FROM은 일종의 for문임.
+
+FROM 대상이 여러개면 for 을 여러 개 돌리는 거고.
+
+  
+
+고로 원래 문제의 모범 답안은
+```sql
+SELECT DISTINCT S.sname
+
+FROM S
+
+WHERE NOT EXISTS(
+
+SELECT *
+
+FROM SP
+
+WHERE SP.s#=S.s#
+
+  AND SP.p#='p2'
+
+)
+```
+
+### 모든 부품을 공급하는 공급자에 대한 공급자의 이름을 구하시오.
+
+모범:
+```sql
+SELECT sname
+
+FROM S
+
+WHERE NOT EXISTS(
+
+SELECT *
+
+FROM P
+
+WHERE NOT EXISTS(
+
+SELECT *
+
+FROM SP
+
+WHERE S.s#=SP.s# AND P.p#=SP.p#
+
+)
+
+);
+```
+그러니까 공급 안하는 부품이 존재 안하는 공급자를 구하는 거임?!
+```sql
+SELECT *
+
+FROM P
+
+WHERE NOT EXISTS(
+
+SELECT *
+
+FROM SP
+
+WHERE S.s#=SP.s# AND P.p#=SP.p#
+
+)
+```
+위의 이거는 S가 공급하지 않는 부품의 목록임.
+
+왜냐하면 저 NOT EXISTS 다음에 있는 join?이
+
+P랑 S 를 SP로 join한거.
+
+그래서 저건 S가 공급하는...
+
+
+
+중첩 for가 되면 머리가 아파짐..
+
+
+
+SQL/92?에선
+```sql
+SELECT DISTINCT S.sname
+
+FROM S
+
+WHERE(
+
+SELECT COUNT(SP.p#)
+
+FROM SP
+
+WHERE SP.s#=S.s#
+
+)
+
+=
+
+(
+
+SELECT COUNT(P.p#)
+
+FROM P
+
+)
+
+)
+```
+그러니까 모든 부품 개수랑
+
+공급하는 부품 개수가 같은 사람 찾기.
+
+앞에건 공급하는 부품 p# 개수
+
+뒤에건 전체 부품 p# 개수.
+
+
+
+이거보다 어려운 건 안나올 거암..?
+
+- 같은 문제 나올..지도..?
