adjust slleep/wake

--- a/PureMD/데이터베이스기초/7.md
+++ b/PureMD/데이터베이스기초/7.md
@@ -346,7 +346,7 @@ WHERE
 
 
 
->봉
+>여기부터 졺...
 
 
 
@@ -378,7 +378,7 @@ _ 있는 형
 
 != 대신 <>를 쓰네..
 
-<!깸>
+>여기부터 깸...
 
 
 
@@ -763,7 +763,7 @@ EXISTS 필수..?
 
 
 ex:부서 내 월급 평균보다 많이 받는 사람 이름
-
+```sql
 SELECT EMPNAME
 
 FROM EMPLOEE AS E1
@@ -777,7 +777,7 @@ FROM EMPLOEE AS E2
 WHERE E1.DNO=E2.DNO
 
 )
-
+```
 담주에 집중적으로 할거.
 
 >쉬는시간!
@@ -842,9 +842,9 @@ C/C++/JAVA/PYTHON
 
 중간고사 이후 예정.
 
-난 namedtuple 써야지ㅋㅋ
+내 경우에는 namedtuple 써야지
 
-map이란 filter도 있으면 아무튼 함수형,선언형이 아닐까?
+map이란 filter도 있으면 아무튼 함수형이고, 즉 선언형에 가깝다고 봐도 되지 안을까..?
 
 
 
