--- a/PureMD/데이터베이스기초/8.md
+++ b/PureMD/데이터베이스기초/8.md
@@ -402,7 +402,7 @@ primary,수퍼,...키.
 
 
 
-### 무결서 제약 조건
+### 무결 제약 조건
 
 무결성=데이터의 일관성,정확성을 유지해야..?
 
@@ -490,7 +490,7 @@ A-B는
 
 A에 있는데 B에만 없ㅇ는거.
 
-<졸기 시작>
+>졸기 시작함...
 
 카티션
 
@@ -500,25 +500,25 @@ A에 있는데 B에만 없ㅇ는거.
 
 
 
-### 순수 관나계 연산자
+### 순수 관계 연산자
 
 
 
-질문이 많???
+질문이 많이..?
 
-디비젼-모르면 못푸는 문제가 마늠..?
+디비젼-모르면 못푸는 문제가 많음..?
 
-문제의 의도를 새악할 수 있어야..?
-
-
-
-조인-같은 되메인가져야.
+문제의 의도를 파악할 수 있어야..?
 
 
 
+조인-같은 도메인가져야.
 
 
-시ㅗㅓ메 비숫한 ㅝ리문제ㅡ
+
+
+
+시험에 비숫한 쿼리문제
 
 다시 낼 수도..?
 
@@ -530,17 +530,17 @@ A에 있는데 B에만 없ㅇ는거.
 
 세타 조인
 
-- 가장 ㅣㄹ본적
+- 가장 기본적
 
-배교 연산자 릴레이셔
+비교 연산자 릴레이셔
 
-도등 조인)반복 될 수도.
+동등 조인)반복 될 수도.
 
 가장 보편적인ㄱ ㅔ자연 조임
 
 모든 동등 조인은 ??
 
-디빚 ㅕㄴ ㅣㄱㅇㄱ이 안남
+[](디빚 ㅕㄴ ㅣㄱㅇㄱ이 안남)
 
 
 
@@ -554,15 +554,15 @@ A에 있는데 B에만 없ㅇ는거.
 
 이번 시험에선 여기만
 
-- CREATE,DELETE같ㅇ,ㄴ강 ㅏㅄㅇ,ㅁ/
+- CREATE,DELETE같은 제어문은 나중에
 
-LIKE와 함께하ㅡㄴㄴ ㅂ돤 가능자
-
-
+[](LIKE와 함께하ㅡㄴㄴ ㅂ돤 가능자)
 
 
 
-NULL이랑은 뭘  비교핻 filㄹㄹㄹㄹㄹㄹㄹㄹㄹㄹ
+
+
+NULL이랑은 뭘 비교해도 false
 
 GROUP BY.spec??
 
@@ -590,7 +590,7 @@ attr 1개의 릴레이션
 
 - 
 
-<깸>
+>일어남...
 
 INSERT문..?
 
