--- a/PureMD/데이터베이스기초/9.시험직후.md
+++ b/PureMD/데이터베이스기초/9.시험직후.md
@@ -8,7 +8,7 @@
 
 DB.핵심=sql
 
-- 이거만 해도 회사
+- 이거만 해도 회사 취직 가능?
 
 >우리가 DB 만들 건 아니라...
 
@@ -71,8 +71,7 @@ DB 설계는 어케 스키마를 '적절히' 만드느냐
 DB.설계.과정[2]:
 
 >초보자는 못하는게 당연하지만
-
->시니어-가 되려면 할 줄 알아야!
+>시니어<T>가 되려면 할 줄 알아야!
 
 개념 설계
 
