--- a/PureMD/데이터베이스기초/12.md
+++ b/PureMD/데이터베이스기초/12.md
@@ -1,12 +1,11 @@
-# todo=
+todo
+- er diagram review
 
-er diagram review
-
-전체적 review
-
+- 전체적 review
 
 
-이제 DB가 어케 설계,만들어지는 지 알므.
+
+이제 DB가 어케 설계,만들어지는 지 앎.
 
 1.문제 발생
 
@@ -255,9 +254,6 @@ m:n 관계
 
 
 
-
-@re-review
-
 # 외부자료-DB.설계.ER 모델링
 
 데이터 모델링 단계
@@ -291,21 +287,6 @@ m:n 관계
 용어가 많이 중요..?
 
 - 불필요한/애매한 표현은 잘 제거하기.
-
-
-
-개체 변환?
-
-
-
-1:다 관계
-
-- ㄷ비식별 식?
-
-\\<-- !졺 -->
-!졺
-
-
 
 
 
