--- a/PureMD/데이터베이스기초/13.md
+++ b/PureMD/데이터베이스기초/13.md
@@ -1,81 +1,3 @@
-# 기말
-
-6/17 금
-
-1:30~3:00
-
-507호(지난번과 동일)
-
-
-
-
-
-# 과제
-
-SQL 실습
-
-배점 마니 줌..?
-
-ref 오세강 교수님 식습 자료..?
-
-
-
-거기 다 있으니 따로 안적어도 될듯.
-
-
-
-데이터는 임의적-으로 넣..어야..??
-
-
-
-뭐지;;
-
-
-
-다는 말고
-
-저기 있는 실습 과제중 과제별 3~4개정도 '선택해서'하기.
-
-문제 직접 만들어도 됨;;
-
-table 최소 2개는 써보기..?
-
-- join..?
-
-
-
-계산?sort?집합 연산?
-
-등 해보기?
-
-
-
-limit 3이나 top 3 등으로 limit 가능한 경우가..?
-
-DBMS에는 내장-비표준 함수들이 좀 있음.
-
-LOWER,DATE 등...
-
-
-
-## 즉,과제가
-
-실습과제 1,2,3 문제 일고
-
-데이터 임의로 입력하고
-
-
-
-과제별로 4+분제 추출해서 실행.
-
-
-
-자기 홈피에 입력 내용,결과 보여줘야.
-
-6.23까지...?
-
-- 오. due 널널하네
-
 # 회복과 병행제어
 
 사용자에서 의식 안해도 해주는 기능?
@@ -440,8 +362,6 @@ rollback
 
 - 메인 메모리<->프로그램 변수는 r/w
 
-\\<-- !졸기 시작 -->
-!졸기 시작
 
 
 
@@ -451,7 +371,7 @@ rollback
 
 - 트랜잭션 처리를 위해서는보통 디스크->메인 메모리로 처리하고
 
-- 그 겨ㄹ과를 w해야.
+- 그 결과를 w해야.
 
 
 
@@ -467,13 +387,13 @@ rollback
 
 
 
-보통 메모리는 블록-단위로 왔다 갔다 ㅏㅎㅁ.
+보통 메모리는 블록-단위로 왔다 갔다 함.
 
 
 
 #### 회복
 
-by DBMS 내장 ghlqnr hksflwks.
+by DBMS 내장 회복 기능.
 
 
 
@@ -485,11 +405,11 @@ dump?
 
 dump/log
 
-- dump는 full-사상태 저장.
+- dump는 full-상태 저장.
 
 log는 변경 내역..?
 
-- 둘의 비용 생각헤ㅐ서 적적ㄹ
+- 둘의 비용 생각해서 적절히.
 
 
 
@@ -497,19 +417,12 @@ redo
 
 undo
 
-- 말 그대로 모든 ㅣㅐㅎfmf durdmfhgo
-
-
-
-\\<-- !쉬는 시간 -->
-!쉬는 시간
-
+- 말 그대로 모든 걸 역으로.
 
 
 로그 파일
 
 - 데이터 변경 전/후의 값 기록한 파일.
-
 
 
 레코드 단위로 트랜잭선 수행과함께 기록횜
