--- a/PureMD/데이터베이스기초/14.md
+++ b/PureMD/데이터베이스기초/14.md
@@ -156,8 +156,6 @@ FROM (user|role|PUBLIC)
 
 ```
 
-\\<-- !살짝 졸림... -->
-!살짝 졸림...
 
 ## 역할?
 
@@ -177,10 +175,6 @@ guest 계정도 있을수도.
 
 
 
-
-
-\\<-- !살짝 깸 -->
-!살짝 깸
 
 # SQL.연동
 
@@ -213,9 +207,7 @@ sqllite랑 api 비슷헤보이네.
 보나스-과제로 저 python-연동 한번 해보셈.
 
 
-
-\\<-- !시험범위 종료 -->
-!시험범위 종료
+여기까지가 시험범위.
 
 # 빅데이터-소개
 
@@ -728,7 +720,7 @@ xml.element.이름.작성규칙?
 
 주석이 가능!
 
-<!-- 주석내용 -->
+`<!-- 주석내용 -->`
 
 이 중간엔 - 못넣음.
 
@@ -739,16 +731,15 @@ xml.element.이름.작성규칙?
 엔티티?
 
 - 걍 escape 비스무레한 거.
-
-& :&amp; =&#38=&#x26
+```
+& :&amp; = &#38 = &#x26
 
 < :&lt; 
 
 > :&gt;
 
 ":&quot;
-
-'
+```
 
 ...
 
@@ -794,9 +785,6 @@ namespace?
 형태..?
 
 
-
-\\<-- !졸림... -->
-!졸림...
 
 ## DTD?
 
@@ -864,135 +852,7 @@ SAX=Simple API for XML
 
 - 메모리-효율성
 
-- 대신 한번 검색 끝남녀 뒤에ㅓㅅ 부터 처음부터가 ㄴ
+- 대신 한번 검색 끝남녀 뒤에서 부터 처음부터가 느림?
 
-- 
 
-\\<-- !지대로 졺 -->
-!지대로 졺
-
-\\<-- !졸린 수준으로. -->
-!졸린 수준으로.
-
-
-
-# 시험
-
-6.17.금
-
-1:30~3:00
-
-종합강의실 510호.
-
-범위=~오늘 내용 중에서 -={빅데이터,xml}
-
-중간 이후
-
-- SQL+관계대수 포함.
-
-- 문제 나올 거임.
-
-ERD
-
-정규화
-
-- 신경써서?
-
-	- 스키마 주어지면 정규화..?
-
-- 제 몇 정규형인가?
-
-- 제 n면 그 다음/전단계도 ㄱㄴ해야!
-
-트랜잭션
-
-...
-
-형태는 지난번과 비슷.
-
-
-
-OX
-
-괄호
-
-서술형 마니.
-
-
-
-# 사족
-
-교수님 왈+부보님 왈
-
-가장 자유롭고 좋았던 시기가 대 2임...
-
-근데 아니네...
-
-
-
-거기에 집중도 잘 안될거임.
-
-
-
-IT라 취업은 그나마 잘되지만
-
-노는건 못함(계속 공부해야.)
-
-- 영어공부도 중요!
-
-
-
-인간관계가 힘든 문제...
-
-- 가장 부담..
-
-- 근데 여기서 부담이면 사회에선 더 심하지...
-
-	- "사회 나가면 안할 것 같아?"season 2
-
-- 코로나땜시 
-
-
-
-단순히 하고 싶지만 그게 잘 안되네...
-
-시험 끝나면 다음 주에 여유 있으니 상담 필요하면 오셈?
-
-- 해줄 말이 있음.
-
-
-
-홈피 과제.due=6.25
-
-지난번처럼 이러닝-과제란에 주소.
-
-
-
-걍 ppt 말고 인터넷에서 뭐 더 추가해보기
-
-- 빅데타나 XML 등...
-
-- 병렬컴퓨터 등.
-
-
-
-뽀-나스:
-
-임베디드 SWL 관련해서
-
-기본 언어 (C/C++/JAVA/PYTHON)으로
-
-연결해서 뭐 프로그램 짜서 제출하면 보-나스!
-
-
-
-중간30 기말30 과제 30 출석 10(근데 누구나 10)
-
-
-
-그 SQL 과제는 말 그대로 Pure-SQL인 듯...
-
-다른 언어 통합이 아니라..
-
-그럼 걍 Python 갖고 SQL인터프리터 정도만 만들어서 하자.
 
